--- a/SwipeCardView.xib
+++ b/SwipeCardView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -134,6 +134,7 @@
                 </visualEffectView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-Ki-gWb">
                     <rect key="frame" x="10" y="15" width="280" height="280"/>
+                    <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="280" id="BDI-6Z-UyU"/>
                         <constraint firstAttribute="height" constant="280" id="Rq3-dc-Ts8"/>
@@ -149,6 +150,9 @@
                             <exclude reference="xGe-On-UfC"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="9TT-Lh-5Ba" appends="YES" id="bnf-cx-wdQ"/>
+                    </connections>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -190,6 +194,7 @@
             <nil key="highlightedColor"/>
             <point key="canvasLocation" x="385" y="785"/>
         </label>
+        <tapGestureRecognizer id="9TT-Lh-5Ba"/>
     </objects>
     <resources>
         <image name="IMG_5544.jpg" width="2448" height="3264"/>
